<resources>
    <string name="app_name">Words</string>
    <string name="restart_level">Volver a intentar</string>
    <string name="next_level">Siguiente\n Palabra</string>
    <string name="start_game">Nuevo juego</string>
    <string name="quit">Salir</string>
    <string name="resume_game">Continuar juego</string>
    <string name="well_done">Felicitaciones!!</string>
    <string name="game_over">Game Over!!</string>
    <string name="sign_in_why">Sign in with Google to share your scores and achievements with your friends.</string>
    <string name="you_are_signed_in">You are signed in with Google.</string>
    <string name="sign_out">Desconectarse</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>
    <string name="players_exception">There was an issue communicating with players.</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="sign_in">Conectar</string>
    <string name="greeting_msg">Bienvenido, username!</string>
    <string name="greeting_welcome">Bienvenido</string>
    <string name="leaderboard_id">CgkIqKKc4N0KEAIQBw</string>
    <string name="show_leaderboard">Tabla de posiciones</string>
</resources>
