<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="org.fransis.game.words.MainMenuFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal|center_vertical">

        <ImageView
            android:id="@+id/player_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:id="@+id/text_greeting" />

        <Button
            android:id="@+id/btn_play"
            android:layout_width="200dp"
            android:background="@drawable/good"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/iniciar_juego"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btn_resume"
            android:layout_width="200dp"
            android:background="@drawable/good"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/resume_game"
            android:visibility="gone"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="200dp"
            android:background="@drawable/wrong"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/quit" />


    </LinearLayout>

    <LinearLayout android:id="@+id/sign_in_bar"
        android:layout_height="120dp"
        android:layout_width="match_parent"
        android:background="#f0f0f0"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_why"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="#808080" />
    </LinearLayout>

    <LinearLayout android:id="@+id/sign_out_bar"
        android:layout_height="120dp"
        android:layout_width="match_parent"
        android:background="#f0f0f0"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center|end"
        android:padding="10dp">

        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/you_are_signed_in"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#808080" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>